--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "extend": "^3.0.1",
+    "prettyjson": "^1.2.1",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
-    "prettyjson": "^1.2.1"
+    "safe-eval": "^0.4.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
